Fix vertical alignment of inline form units in IE [#153417045]

--- a/src/css/forms/forms.scss
+++ b/src/css/forms/forms.scss
@@ -492,6 +492,12 @@ textarea.valid {
     }
   }
 
+  &.inline-form-unit {
+    .field-row {
+      height: 32px;
+    }
+  }
+
   &.has-error {
     .help-row {
       color: $input-invalid-text;
